--- a/pom.xml
+++ b/pom.xml
@@ -33,7 +33,7 @@
             <artifactId>selenium-chrome-driver</artifactId>
             <version>4.10.0</version> <!-- 使用最新版本 -->
         </dependency>
-        <!-- WebDriver Manager (可以自动下载和管理浏览器驱动) -->
+        <!-- WebDriver Manager -->
         <dependency>
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
@@ -51,6 +51,23 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.0-alpha1</version> <!-- 使用最新版本 -->
+        </dependency>
+
+        <!-- ORM Hibernate database -->
+        <dependency>
+            <groupId>org.hibernate</groupId>
+            <artifactId>hibernate-core</artifactId>
+            <version>6.1.2.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>mysql</groupId>
+            <artifactId>mysql-connector-java</artifactId>
+            <version>8.0.28</version>
+        </dependency>
+        <dependency>
+            <groupId>log4j</groupId>
+            <artifactId>log4j</artifactId>
+            <version>1.2.12</version>
         </dependency>
 
     </dependencies>
