--- a/pom.xml
+++ b/pom.xml
@@ -72,6 +72,11 @@
             <artifactId>javafx-base</artifactId>
             <version>17.0.6</version>
         </dependency>
+        <dependency>
+            <groupId>org.openjfx</groupId>
+            <artifactId>javafx-web</artifactId>
+            <version>17.0.6</version>
+        </dependency>
 <!--        图标库-->
         <dependency>
             <groupId>de.jensd</groupId>
@@ -89,7 +94,11 @@
             <artifactId>vfx</artifactId>
             <version>1.2.0</version>
         </dependency>
-
+        <dependency>
+            <groupId>com.vladsch.flexmark</groupId>
+            <artifactId>flexmark</artifactId>
+            <version>0.42.14</version>
+        </dependency>
     </dependencies>
 
 </project>
