--- a/pom.xml
+++ b/pom.xml
@@ -118,6 +118,12 @@
             <version>1.2.12</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-ooxml</artifactId>
+            <version>5.3.0</version>
+        </dependency>
+
     </dependencies>
 
 </project>
