--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,6 @@
 target/
+**/resources/summary
+**/resources/test*
 !.mvn/wrapper/maven-wrapper.jar
 !**/src/main/**/target/
 !**/src/test/**/target/
