--- a/pom.xml
+++ b/pom.xml
@@ -52,7 +52,7 @@
             <artifactId>slf4j-simple</artifactId>
             <version>2.0.0-alpha1</version> <!-- 使用最新版本 -->
         </dependency>
-<!--        javafx -->
+        <!--        javafx -->
         <dependency>
             <groupId>org.openjfx</groupId>
             <artifactId>javafx-controls</artifactId>
@@ -78,7 +78,7 @@
             <artifactId>javafx-web</artifactId>
             <version>17.0.6</version>
         </dependency>
-<!--        图标库-->
+        <!--        图标库-->
         <dependency>
             <groupId>de.jensd</groupId>
             <artifactId>fontawesomefx-fontawesome</artifactId>
@@ -89,7 +89,7 @@
             <artifactId>ikonli-materialdesign2-pack</artifactId>
             <version>12.3.0</version>
         </dependency>
-<!--        非常好 ui 库-->
+        <!--        非常好 ui 库-->
         <dependency>
             <groupId>io.vproxy</groupId>
             <artifactId>vfx</artifactId>
@@ -122,30 +122,45 @@
             <artifactId>json</artifactId>
             <version>20230227</version>
         </dependency>
-
+        <!--        提取word ppt等文字-->
         <dependency>
             <groupId>org.apache.poi</groupId>
             <artifactId>poi-ooxml</artifactId>
-            <version>5.3.0</version>
+            <version>5.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi</artifactId>
+            <version>5.2.3</version>
+        </dependency>
+        <dependency>
+            <groupId>org.apache.poi</groupId>
+            <artifactId>poi-scratchpad</artifactId>
+            <version>5.2.3</version>
         </dependency>
 
+        <dependency>
+            <groupId>org.apache.pdfbox</groupId>
+            <artifactId>pdfbox</artifactId>
+            <version>2.0.29</version>
+        </dependency>
 
         <!-- JavaFX -->
-<!--        <dependency>-->
-<!--            <groupId>org.openjfx</groupId>-->
-<!--            <artifactId>javafx-controls</artifactId>-->
-<!--            <version>13</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.openjfx</groupId>-->
-<!--            <artifactId>javafx-web</artifactId>-->
-<!--            <version>13</version>-->
-<!--        </dependency>-->
-<!--        <dependency>-->
-<!--            <groupId>org.openjfx</groupId>-->
-<!--            <artifactId>javafx-fxml</artifactId>-->
-<!--            <version>13</version>-->
-<!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.openjfx</groupId>-->
+        <!--            <artifactId>javafx-controls</artifactId>-->
+        <!--            <version>13</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.openjfx</groupId>-->
+        <!--            <artifactId>javafx-web</artifactId>-->
+        <!--            <version>13</version>-->
+        <!--        </dependency>-->
+        <!--        <dependency>-->
+        <!--            <groupId>org.openjfx</groupId>-->
+        <!--            <artifactId>javafx-fxml</artifactId>-->
+        <!--            <version>13</version>-->
+        <!--        </dependency>-->
 
         <!-- Markdown 解析 -->
         <dependency>
